# project_template

./: .gitignore  README.md  add_new_users.py  dev_add_new_user.ipynb  dev_setup.ipynb  gitignore_fix.sh  output.txt  setup_project.py  test_setup_project.ipynb
project_template/: README.md  README_cookiecutter_test.md  cookiecutter.json  pyproject.toml
template_user/: .gitignore  README.md  README.md_revised.md  README_test.md  README_test.md_revised.md  TEST.md  TEST.md_revised.md  TEST_2.md_revised.md  TEST_revised.md  TEST_revised.md_revised.md  add_new_users.py  dev.ipynb  dev_abs_paths.ipynb  dev_add_user.ipynb  git_push_companion.ipynb  pyproject.toml  requirements.txt
template_user/analysis/: README.md  README.md_revised.md  Untitled.ipynb  Untitled1.ipynb  dev_abs_path_R.ipynb  template.R  template_python.ipynb  test_load_paths.ipynb  test_load_paths_R.ipynb  test_pyprojroot.ipynb
template_user/dev/: dev_add_new_user.ipynb  dev_load_config.ipynb  dev_setup.ipynb  test_add_users.ipynb  test_config.yml  test_get_path_map.ipynb  test_get_paths_R.ipynb  test_replace_strings.ipynb  test_replace_strings_R.ipynb  test_resources_post_setup.yml  test_resources_post_setup_with_new_user.yml  test_utils.py  test_yml.yml  test_yml_out.yml
template_user/processing/: README.md  README.md_revised.md  template.sh
template_user/resources/: README.md  README.md_revised.md  TEST.md  TEST.md_revised.md  TEST_2.md  TEST_revised.md  add_gh_url_to_resources.ipynb  add_gh_url_to_resources.py  add_links_to_readmes.py  add_new_users.py  add_subfolders_to_readmes.py  config.yml  (+16 more)
(+46 files in other folders)
