[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "Template project for {{cookiecutter.user}}"
readme = "README.md"
requires-python = ">=3.8"

# <-- Add your required Python packages here
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.25",
    "pyyaml"
]

[tool.setuptools.packages.find]
where = ["."]
