[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project_utils"
version = "0.1.0"
description = "Template project utilities"
authors = [{ name="Fairlie Reese", email="fairlie.reese@gmail.com" }]
requires-python = ">=3.7"
dependencies = [
    "PyYAML",
    "numpy",
    "pandas"
    ]

[tool.setuptools.packages.find]
where = ["."]
include = ["resources*"]
